--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Verzach3\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+file.reference.postgresql-42.3.1.jar=C:\\Users\\Kahyberth\\Documents\\postgresql-42.3.1.jar
+user.properties.file=C:\\Users\\Kahyberth\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
