--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
-file.reference.postgresql-42.3.1.jar=C:\\Users\\Kahyberth\\Documents\\postgresql-42.3.1.jar
-user.properties.file=C:\\Users\\Kahyberth\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.postgresql-42.3.1.jar=D:\\Proyectos\\Proyectos Java\\postgresql-42.3.1.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Verzach3\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
